--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,6 +1,7 @@
 [versions]
 activityCompose = "1.9.0"
 agp = "8.8.1"
+androidxComposeBom = "2024.10.01"
 audienceNetworkSdk = "6.15.0"
 composeBom = "2023.08.00"
 composeBomVersion = "2024.05.00"
@@ -8,6 +9,7 @@ constraintlayout = "2.1.4"
 core = "1.10.3"
 glide = "4.16.0"
 gson = "2.10.1"
+guava = "32.1.3-android"
 junit = "4.13.2"
 junitVersion = "1.1.5"
 espressoCore = "3.5.1"
@@ -18,6 +20,7 @@ material = "1.12.0"
 material3 = "1.2.1"
 materialVersion = "1.9.0"
 oopsnointernet = "2.0.0"
+playServicesAds = "24.2.0"
 playServicesAdsIdentifier = "18.1.0"
 recyclerviewAnimators = "4.0.2"
 uiTestJunit4 = "1.6.0-alpha05"
@@ -29,6 +32,7 @@ workRuntimeVersion = "2.9.0"
 androidx-activity-compose = { module = "androidx.activity:activity-compose", version.ref = "activityCompose" }
 androidx-compose-bom = { module = "androidx.compose:compose-bom", version.ref = "composeBomVersion" }
 androidx-compose-bom-v20230800 = { module = "androidx.compose:compose-bom", version.ref = "composeBom" }
+androidx-compose-bom-v20241001 = { module = "androidx.compose:compose-bom", version.ref = "androidxComposeBom" }
 androidx-constraintlayout = { module = "androidx.constraintlayout:constraintlayout", version.ref = "constraintlayout" }
 androidx-lifecycle-process = { module = "androidx.lifecycle:lifecycle-process", version.ref = "lifecycleProcess" }
 androidx-lifecycle-runtime-ktx = { module = "androidx.lifecycle:lifecycle-runtime-ktx", version.ref = "lifecycleProcess" }
@@ -43,6 +47,7 @@ audience-network-sdk = { module = "com.facebook.android:audience-network-sdk", v
 core = { module = "com.google.android.play:core", version.ref = "core" }
 glide = { module = "com.github.bumptech.glide:glide", version.ref = "glide" }
 gson = { module = "com.google.code.gson:gson", version.ref = "gson" }
+guava = { module = "com.google.guava:guava", version.ref = "guava" }
 junit = { group = "junit", name = "junit", version.ref = "junit" }
 ext-junit = { group = "androidx.test.ext", name = "junit", version.ref = "junitVersion" }
 espresso-core = { group = "androidx.test.espresso", name = "espresso-core", version.ref = "espressoCore" }
@@ -51,6 +56,7 @@ kotlin-bom = { module = "org.jetbrains.kotlin:kotlin-bom", version.ref = "kotlin
 material = { group = "com.google.android.material", name = "material", version.ref = "material" }
 material-v190 = { module = "com.google.android.material:material", version.ref = "materialVersion" }
 oopsnointernet = { module = "org.imaginativeworld.oopsnointernet:oopsnointernet", version.ref = "oopsnointernet" }
+play-services-ads = { module = "com.google.android.gms:play-services-ads", version.ref = "playServicesAds" }
 play-services-ads-identifier = { module = "com.google.android.gms:play-services-ads-identifier", version.ref = "playServicesAdsIdentifier" }
 recyclerview-animators = { module = "jp.wasabeef:recyclerview-animators", version.ref = "recyclerviewAnimators" }
 ui-tooling = { module = "androidx.compose.ui:ui-tooling", version.ref = "uiTooling" }
